src/assets/css/form.css
.form-input {
	border-radius: var(--radius-md);
	box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
	color: var(--color-grey-700);
	display: block;
	outline: 0;
	padding-block-end: calc(var(--spacing) * 2);
	padding-inline-start: calc(var(--spacing) * 3);
	padding-inline-end: calc(var(--spacing) * 3);
	padding-block-start: calc(var(--spacing) * 2);
	width: 100%;

	&:where(.dark, .dark *) {
		background-color: transparent;
		color: white;
	}
}

.form-select {
	appearance: none;
	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
	background-position: right 0.5rem center;
	background-repeat: no-repeat;
	background-size: 1.5em 1.5em;
	border-radius: var(--radius-md);
	box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
	color: var(--color-grey-700);
	display: block;
	outline: 0;
	padding-block-end: calc(var(--spacing) * 2);
	padding-block-start: calc(var(--spacing) * 2);
	padding-inline-end: 2.5em;
	padding-inline-start: calc(var(--spacing) * 3);
	width: 100%;

	&:where(.dark, .dark *) {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23ffffff90' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
		background-color: transparent;
		color: white;
	}

	.form-field--error & {
		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23dc2625' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");

		&:where(.dark, .dark *) {
			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%23fda5a5' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
		}
	}
}

.form-checkbox {
	--ring-size: 1px;
	--ring-colour: var(--color-grey-300);

	appearance: none;
	border-radius: var(--radius-sm);
	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);
	flex-shrink: 0;
	height: calc(var(--spacing) * 4);
	margin-block-start: calc(var(--spacing) * 0.5);
	outline: 0;
	transition-duration: var(--default-transition-duration);
	transition-property: all;
	transition-timing-function: var(--default-transition-timing-function);
	width: calc(var(--spacing) * 4);

	&:hover {
		--ring-size: 2px;
		--ring-colour: var(--color-grey-500);
	}

	&:focus {
		--ring-size: 2px;
		--ring-colour: var(--color-purple-800);
	}

	&:checked {
		--ring-colour: currentColor;

		background-color: currentColor;
		color: var(--color-purple-800);
	}

	&:where(.dark, .dark *) {
		--ring-colour: rgb(255 255 255 / 30%);

		background-color: rgb(255 255 255 / 20%);

		&:hover {
			--ring-colour: rgb(255 255 255 / 50%);
		}

		&:focus {
			--ring-colour: var(--color-purple-400);
		}

		&:checked {
			--ring-colour: currentColor;

			color: var(--color-purple-400);
		}
	}
}

.form-radio {
	--ring-size: 1px;
	--ring-colour: var(--color-grey-300);

	appearance: none;
	border-radius: 9999px;
	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);
	flex-shrink: 0;
	height: calc(var(--spacing) * 4);
	outline: 0;
	transition-duration: var(--default-transition-duration);
	transition-property: all;
	transition-timing-function: var(--default-transition-timing-function);
	width: calc(var(--spacing) * 4);

	&:hover {
		--ring-size: 2px;
		--ring-colour: var(--color-grey-500);
	}

	&:focus {
		--ring-size: 2px;
		--ring-colour: var(--color-purple-800);
	}

	&:checked {
		--ring-colour: currentColor;

		background-color: currentColor;
		color: var(--color-purple-800);
	}

	&:where(.dark, .dark *) {
		--ring-colour: rgb(255 255 255 / 30%);

		background-color: rgb(255 255 255 / 20%);

		&:hover {
			--ring-colour: rgb(255 255 255 / 50%);
		}

		&:focus {
			--ring-colour: var(--color-purple-400);
		}

		&:checked {
			--ring-colour: currentColor;

			color: var(--color-purple-400);
		}
	}
}

.button-group {
	--ring-size: 0;
	--ring-colour: transparent;

	appearance: none;
	background-color: white;
	border-radius: var(--radius-md);
	border: 1px solid var(--color-grey-300);
	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);
	color: currentColor;
	cursor: pointer;
	display: inline-block;
	outline: 0;
	padding-block: 0.5em;
	padding-inline: 1em;
	text-decoration: none;
	transition-duration: var(--default-transition-duration);
	transition-property: all;
	transition-timing-function: var(--default-transition-timing-function);

	&:hover, &:focus {
		background-color: var(--color-grey-50);
		border-color: var(--color-grey-400);
		color: var(--color-grey-700);
	}

	&:active {
		background-color: var(--color-grey-100);
		border-color: var(--color-grey-500);
		color: var(--color-grey-800);
	}

	&:where(.dark, .dark *) {
		background-color: rgb(255 255 255 / 20%);
		border-color: rgb(255 255 255 / 20%);

		&:hover, &:focus {
			background-color: rgb(255 255 255 / 30%);
			border-color: rgb(255 255 255 / 20%);
			color: var(--color-grey-100);
		}

		&:active {
			background-color: rgb(255 255 255 / 40%);
			border-color: transparent;
			color: var(--color-grey-50);
		}
	}

	&:is(:where(.peer):focus ~ *) {
		--ring-size: 2px;
		--ring-colour: var(--color-purple-800);

		background-color: var(--color-grey-50);
		border-color: var(--color-grey-400);
	}

	&:is(:where(.peer):checked ~ *) {
		background-color: var(--color-purple-800);
		border-color: var(--color-purple-900);
		color: white;
	}

	&:is(:where(.peer):checked:focus ~ *) {
		background-color: var(--color-purple-800);
		color: white;
	}

	&:where(.dark, .dark *) {
		background-color: rgb(255 255 255 / 20%);
		border-color: rgb(255 255 255 / 20%);

		&:is(:where(.peer):focus ~ *) {
			--ring-size: 2px;
			--ring-colour: var(--color-purple-400);

			background-color: rgb(255 255 255 / 30%);
			border-color: rgb(255 255 255 / 20%);
		}

		&:is(:where(.peer):checked ~ *) {
			background-color: var(--color-purple-500);
			border-color: var(--color-purple-400);
		}

		&:is(:where(.peer):checked:focus ~ *) {
			background-color: var(--color-purple-600);
			border-color: var(--color-purple-500);
		}
	}
}

.button-group--first {
	border-start-start-radius: var(--radius-lg);
	border-end-start-radius: var(--radius-lg);
}

.button-group--middle {
	border-inline-start-width: 0;
}

.button-group--last {
	border-start-end-radius: var(--radius-lg);
	border-end-end-radius: var(--radius-lg);
}

.form-field--error {
	--ring-colour: var(--color-red-600);

	box-shadow: 0 0 0 1px var(--ring-colour);

	&:where(.dark, .dark *) {
		--ring-colour: var(--color-red-300);
	}
}

[data-selector="form-field-wrapper"] {
	--ring-size: 1px;
	--ring-colour: var(--color-grey-300);

	border-radius: var(--radius-md);
	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);

	&:has(:hover) {
		--ring-size: 1px;
		--ring-colour: var(--color-grey-400);
	}

	&:has(:focus) {
		--ring-size: 2px;
		--ring-colour: var(--color-purple-800);
	}

	&:where(.dark, .dark *) {
		background-color: rgb(255 255 255 / 20%);
		--ring-colour: rgb(255 255 255 / 30%);

		&:has(:hover) {
			--ring-colour: rgb(255 255 255 / 50%);
		}

		&:has(:focus) {
			--ring-colour: var(--color-purple-400);
		}
	}
}

[data-selector="form-prefix"],
[data-selector="form-suffix"] {
	color: var(--color-grey-500);

	& > svg {
		flex-shrink: 0;
		height: calc(var(--spacing) * 4);
		stroke: currentColor;
		width: calc(var(--spacing) * 4);
	}

	&:where(.dark, .dark *) {
		color: var(--color-grey-300);
	}
}

textarea {
	field-sizing: content;
	min-height: calc(var(--spacing) * 40);
}

[type="checkbox"]:checked {
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3E%3Cpath fill='%23FFF' d='m12.796 6.086-5.533 5.706a.675.675 0 0 1-.975 0l-3.086-3.2a.727.727 0 0 1 0-1.005l.861-.889a.675.675 0 0 1 .974 0l1.756 1.757 4.17-4.248a.675.675 0 0 1 .973 0l.86.869c.13.133.204.315.204.505s-.073.371-.204.505'/%3E%3C/svg%3E");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
}

[type="radio"]:checked {
	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
	background-position: center;
	background-repeat: no-repeat;
	background-size: 100%;
}

